<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_bg"
    tools:context=".presentation.activites.coin_detail.CoinDetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCoinLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view"
        android:layout_width="156dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/line_detail_activity_symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/btc"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo"
        tools:text="@string/usd" />

    <View
        android:id="@+id/view2"
        android:layout_width="156dp"
        android:layout_height="1dp"
        android:background="@color/line_detail_activity_symbols"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintBottom_toTopOf="@+id/tv_price_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_price_detail"
                app:layout_constraintStart_toEndOf="@+id/tv_price_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_price_detail"
                tools:text="2000.22" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintBottom_toTopOf="@+id/tv_min_price_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_min_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/min_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/min_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/min_price_detail_activity"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_min_price_detail"
                app:layout_constraintStart_toEndOf="@+id/tv_min_price_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_min_price_detail"
                tools:text="2000.22" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_min_price_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_max_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/max_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_min_price_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/max_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/max_price_detail_activity"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_max_price_detail"
                app:layout_constraintStart_toEndOf="@+id/tv_max_price_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_max_price_detail"
                tools:text="2000.22" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_max_price_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLastMarketDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/last_market"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_max_price_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastMarketDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLastMarketDetail"
                app:layout_constraintStart_toEndOf="@+id/tvLastMarketDetail"
                app:layout_constraintTop_toTopOf="@+id/tvLastMarketDetail"
                tools:text="Market" />

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastMarketDetail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastMarketDetail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_time_detail"
                app:layout_constraintStart_toEndOf="@+id/tv_time_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_time_detail"
                tools:text="00:00:00" />

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_detail_activity_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>